--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <title>React App</title>
   </head>
+  <script>let process='test';</script>
+  <!-- delete this script when moving the API to the backend -->
   <body>
     <div id="root"></div>
   </body>
