add fix to edge cases

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="smartbrain.png" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"/>
     <title>Smart Brain</title>
   </head>
-  <script>let process='test';</script>
-  <!-- delete this script when moving the API to the backend -->
   <body>
     <div id="root"></div>
   </body>
